test_suite5/ALAN/test_suite/alan-2022-examples/failing/002470_mutation.alan
source o begin g := > end
